visible fix

--- a/jquery.fancybox.css
+++ b/jquery.fancybox.css
@@ -144,7 +144,7 @@
 	margin-top: -18px;
 	cursor: pointer;
 	z-index: 8040;
-	visibility: hidden;
+	visibility: visible;
 }
 
 .fancybox-prev span {
